[package]
name = "dllinjector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = [
    "tlhelp32",
    "impl-default",
    "handleapi",
    "memoryapi",
] }
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
rfd = "0.10"
memoffset = "0.5.0"
