[package]
name = "RustyInjector"
version = "0.1.0"
edition = "2021"
build = "build.rs"
default-run = "RustyInjector"

[build-dependencies]
winres = "0.1.12"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = [
    "tlhelp32",
    "impl-default",
    "handleapi",
    "memoryapi",
    "consoleapi",
] }
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
rfd = "0.10"
memoffset = "0.5.0"
strum = "0.24.1"
strum_macros = "0.24.1"
image = "0.24.2"

[workspace]
members = [
    "test/dummy_process"
]

[[bin]]
name = "RustyInjector"
path = "src/main.rs"

[[bin]]
name = "DummyProcess"
path = "test/dummy_process/src/main.rs"

[lib]
name = "dlltobeinjected"
path = "test/dummy_dll/src/lib.rs"
crate-type = ["cdylib"]